<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ManageMenuFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:textSize="25dp"
        android:text="@string/hello_blank_fragment"
        android:textFontWeight="40"
        android:gravity="center"/>

    <ImageButton
        android:id="@+id/btn_move_list_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/label_title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/move_list_user"
        android:background="@mipmap/user_image"
        android:radius="5dp"
        />
    <TextView
        android:id="@+id/label_move_list_user"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_user"
        android:layout_alignLeft="@+id/btn_move_list_user"
        android:layout_below="@+id/btn_move_list_user"
        android:textFontWeight="40"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/btn_move_list_room"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/btn_move_list_user"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/btn_move_list_user"
        android:text="@string/move_list_room"
        android:background="@mipmap/room_image"
        android:radius="5dp"/>
    <TextView
        android:id="@+id/label_move_list_room"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_room"
        android:layout_alignLeft="@+id/btn_move_list_room"
        android:layout_below="@+id/btn_move_list_room"
        android:textFontWeight="40"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/btn_move_list_new"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/label_move_list_user"
        android:layout_alignLeft="@+id/label_move_list_user"
        android:layout_marginTop="40dp"
        android:background="@mipmap/news_image"
        android:text="@string/move_list_news"
        android:radius="5dp"/>
    <TextView
        android:id="@+id/label_move_list_new"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_news"
        android:layout_alignLeft="@+id/btn_move_list_new"
        android:layout_below="@+id/btn_move_list_new"
        android:textFontWeight="40"
       android:gravity="center"
        />
    <ImageButton
        android:id="@+id/btn_move_list_static"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="40dp"
        android:layout_alignTop="@+id/btn_move_list_new"
        android:layout_toRightOf="@+id/btn_move_list_new"
        android:background="@mipmap/static_image"
        android:radius="5dp"
        />
    <TextView
        android:id="@+id/label_move_static"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_static"
        android:layout_alignLeft="@+id/btn_move_list_static"
        android:layout_below="@+id/btn_move_list_static"
        android:textFontWeight="40"
        android:gravity="center"/>

</RelativeLayout>